ppx/tests/failing/4.ml
let[@reaml.component "Foo"] _foo () =
  let[@reaml] () = () in
  ()
